--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -1,11 +1,42 @@
-.test {
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;
-    background-color: lightblue;
-    border-radius: 5px;
+}
+
+.background {
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1440px;
+    height: 1028px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: transparent;
+    overflow: hidden;
+    box-sizing: border-box;
+
+        >.ball1 {
+    position: absolute;
+    width: 892px;
+    height: 892px;
+    top: -71px;
+    left: -199px;
+    transform: translate(0%, 0%);
+    border-radius: 50%;
+    z-index: 0;
+    background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+            #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+}
+
 }
