--- a/src/app/portfolio/portfolio.html
+++ b/src/app/portfolio/portfolio.html
@@ -1,4 +1,9 @@
 <div class="background">
     <div class="ball1"></div>
-
+<app-header></app-header>
+<app-hero></app-hero>
+<app-about-me></app-about-me>
+<!--     <app-about-me></app-about-me>
+    <app-skill-set></app-skill-set>
+    <app-my-work></app-my-work> -->
 </div>
