--- a/src/app/portfolio/portfolio.html
+++ b/src/app/portfolio/portfolio.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="main">
     <div class="ball1"></div>
     <div class="hello">{{ myData.DATA.hero.hello.values[myData.DATA.language] }}</div>
     <div class="profession">
@@ -8,6 +8,13 @@
     <div class="scrollText">{{ myData.DATA.hero.scroll.values[myData.DATA.language] }}</div>
     <div class="scrollLine"></div>
     <img src="img/me.png" alt="my photo" class="me" />
+    <div class="mainSocialButtons">
+        <div class="mainSocialButton" *ngFor="let button of myData.DATA.hero.socialButtons.values">
+            <a [href]="button.link" target="_blank">
+                <img [src]="'ico/' + button.icon" [alt]="button.name" />
+            </a>
+        </div>
+    </div>
     <app-header></app-header>
     <app-hero></app-hero>
     <app-about-me></app-about-me>
