--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -17,8 +17,8 @@
 }
 
 header {
+    //border: 1px solid green;
     margin: 0;
-    border: 1px solid green;
     max-width: 1440px;
     width: 100%;
     height: 117px;
