--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -13,11 +13,11 @@
     }
 
     .hero {
+        //border: 1px solid black;
         position: absolute;
         top: -5px;
         left: 50%;
         transform: translate(-50%, 0%);
-        border: 1px solid black;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -184,11 +184,11 @@
     }
 
     .balls {
+        //border: 1px solid black;
         position: absolute;
         top: 0px;
         left: 50%;
         transform: translate(-50%, 0%);
-        border: 1px solid black;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -355,9 +355,9 @@
                 font-family: 'Montserrat', sans-serif;
                 font-style: normal;
                 font-weight: 400;
-                font-size: 21px;
-                line-height: 110%;
-                //text-align: start;
+                font-size: 22px;
+                line-height: 100%;
+                letter-spacing: -0.02em;
                 color: #000000;
             }
 
