--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -8,7 +8,7 @@
     align-items: center;
 
 
-    .dnone {
+    .dNone {
         display: none;
     }
 
@@ -229,162 +229,4 @@
         }
     }
 
-    .letsWorkTogether {
-        //border: 1px solid red;
-        position: absolute;
-        top: 1163px;
-        left: 50%;
-        transform: translate(-50%, 0%);
-
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 40px;
-        width: 1440px;
-        height: 407px;
-        max-width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        background-color: white;
-        box-sizing: border-box;
-        z-index: 1;
-
-        >div {
-            //border: 1px solid green;
-            width: 606px;
-            height: 407px;
-        }
-
-        .letsWorkTogetherLeftSide {
-            //border: 1px solid purple;
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-            width: 100%;
-            height: 100%;
-
-            >.letsWorkTogetherLeftSideTop {
-                //border: 1px solid red;
-                width: 100%;
-                height: auto;
-
-                >.letsWorkTogetherText0 {
-                    //border: 1px solid pink;
-                    font-family: 'Baloo2', sans-serif;
-                    font-style: normal;
-                    font-weight: 750;
-                    font-size: 121px;
-                    line-height: 95%;
-                    letter-spacing: 0.01em;
-                    color: #5988FF;
-                    align-items: start;
-                }
-            }
-
-            >.letsWorkTogetherLeftSideBottom {
-                //border: 1px solid red;
-                width: 100%;
-                height: 100%;
-                gap: 32px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-
-                >.letsWorkTogetherText1 {
-                    //border: 1px solid pink;
-                    font-family: 'Baloo2', sans-serif;
-                    font-style: normal;
-                    font-weight: 750;
-                    font-size: 45px;
-                    line-height: 95%;
-                    letter-spacing: 0.01em;
-                    color: #5988FF;
-                    align-items: center;
-                }
-
-                >.letsWorkTogetherIcons {
-                    //border: 1px solid blue;
-                    width: 100%;
-                    height: 51px;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    gap: 36px;
-
-
-                    >.letsWorkTogetherIcon {
-                        //border: 1px solid red;
-                        width: auto;
-                        height: inherit;
-                        display: flex;
-                        flex-direction: row;
-              
-                        img {
-                            //border: 1px solid pink;
-                            width: auto;
-                            height: 51px;
-                            padding-right: 8px;
-                        }
-
-                        p {
-                            //border: 1px solid green;
-                            font-family: 'Montserrat', sans-serif;
-                            font-style: normal;
-                            font-weight: 500;
-                            font-size: 18px;
-                            line-height: 120%;
-                            color: #5988FF;
-
-                        }
-                    }
-                }
-            }
-        }
-        .letsWorkTogetherRightSide {
-            //border: 1px solid purple;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: start;
-            gap: 32px;
-            width: 100%;
-            height: 100%;
-
-            >.letsWorkTogetherText2 {
-                //border: 1px solid red;
-                font-family: 'Montserrat', sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 22px;
-                line-height: 100%;
-                letter-spacing: -0.02em;
-                color: #000000;
-            }
-
-            >.letsWorkTogetherButton {
-                //border: 1px solid blue;
-                width: 232px;
-                height: 56px;
-                background: #5988FF;
-                border-radius: 28px;
-                font-family: 'Montserrat', sans-serif;
-                font-style: normal;
-                font-weight: 500;
-                font-size: 18px;
-                line-height: 120%;
-                text-align: center;
-                color: #FFFFFF;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-decoration: none;
-
-                :hover {
-                    background: #0043F0;
-                    cursor: pointer;
-                    transition: all 0.3s ease-in-out;
-                }
-            }
-        }   
-    }
 }
