--- a/src/app/aboutme/aboutme.scss
+++ b/src/app/aboutme/aboutme.scss
@@ -13,9 +13,9 @@
         flex-direction: row;
         justify-content: center;
         gap: 40px;
-        width: 1440px;
+        width: 100%;
         height: 407px;
-        max-width: 100%;
+        max-width: 1440px;
         margin-left: auto;
         margin-right: auto;
         background-color: white;
