--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -15,20 +15,20 @@
     .hero {
         //border: 1px solid black;
         position: absolute;
+        box-sizing: border-box;
         top: -5px;
         left: 50%;
         transform: translate(-50%, 0%);
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 1440px;
         height: 1028px;
-        max-width: 100%;
+        max-width: 1440px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
-        background-color: white;
+        background: linear-gradient(179.99deg, #FFFFFF 12.89%, #EAF0FF 91.39%);
         overflow: hidden;
-        box-sizing: border-box;
         z-index: 1;
 
         >.ball1 {
